# chipmunks

./: .editorconfig  .env  .gitignore  CODE_OF_CONDUCT.md  README.md  REUSE.toml  compose.yaml  pyproject.toml  taplo.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: api.yml  api_ci.yml  ci_api.yml  label.yml  labeler.yml  pull_request.yml  ruff.yml  web-precheck.yml  web-presubmit.yml  web.yml
api/: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  config.dev.toml  config.prod.toml  pyproject.toml  settings.dev.toml
api/app/: config.py  db.py  dependencies.py  main.py  models.py  settings.py
api/src/chipmunks_api/: __init__.py  app.py  cli.py
api/tests/: test_main.py
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
chipmunks/: __about__.py  __init__.py  __main__.py  app.py  asgi.py  cli.py  config.py
chipmunks/app/: config.py  plugin.py
frontend/: .prettierrc  Dockerfile  eslint.config.js
frontend/src/: App.tsx
src/chipmunks/: __init__.py  __main__.py  app.py  cli.py
web/: .gitignore  Dockerfile  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/src/: App.tsx
