# SPDX-FileCopyrightText: © 2025 Molly Rose <molly@mollymorphous.dev>
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "chipmunks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Molly Rose", email = "molly@mollymorphous.dev" },
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
chipmunks = "chipmunks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chipmunks"]
