# SPDX-FileCopyrightText: © 2025 Molly Rose <molly@mollymorphous.dev>
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "chipmunks"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Molly Rose", email = "molly@mollymorphous.dev" },
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "litestar[standard]>=2.16.0,<3.0",
    "python-dotenv>=1.1.1,<2.0",
]

[project.scripts]
chipmunks = "chipmunks.cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chipmunks"]

[tool.hatch.version]
path = "chipmunks/__about__.py"
