[project]
name = "chipmunks-api"
version = "0.1.0"
description = "Cute little inventory manager"
readme = "../README.md"
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
authors = [
    "Molly Rose",
    "Jess Muskin-Pierret",
]
requires-python = "~=3.13.2"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.115.11",
    "granian==2.0.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "sqlalchemy[asyncio]==2.0.38",
    "sqlmodel==0.0.24",
]

[dependency-groups]
dev = [
    "ruff==0.9.10",
    {include-group = "mypy"},
    {include-group = "test"},
]
mypy = [
    "mypy[faster-cache]==1.15.0",
]
test = [
    "aiosqlite==0.21.0",
    "httpx==0.28.1",
    "pytest==8.3.5",
    "pytest-randomly==3.16.0",
]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = [
    "tests",
]
