# SPDX-FileCopyrightText: © 2025 Molly Rose <molly@mollymorphous.dev>
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "chipmunks-api"
version = "0.0.0"
description = "API backend of Chipmunks, the cute little inventory manager for groceries and household supplies"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
license-files = ["COPYING.md"]
authors = [
  { name = "Molly Rose", email = "molly@mollymorphous.dev" },
]
scripts = { chipmunks-api = "chipmunks_api.cli:run" }
dependencies = [
  "fastapi>=0.116.0",
  "orjson~=3.10",
  "pydantic-settings~=2.10",
  "pydantic~=2.11",
  "sqlalchemy~=2.0",
  "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
granian = ["granian[pname,uvloop]"]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"
