# SPDX-FileCopyrightText: © 2025 Molly Rose <molly@mollymorphous.dev>
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "chipmunks-api"
version = "0.0.0"
description = "API backend of Chipmunks, the cute little inventory manager for groceries and household supplies"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
license-files = ["COPYING.md"]
authors = [
  { name = "Molly Rose", email = "molly@mollymorphous.dev" },
]
scripts = { chipmunks-api = "chipmunks_api.cli:run" }
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi>=0.116.0",
  "orjson>=3.10.18,<4.0",
  "pydantic-settings>=2.10.1,<3.0",
  "pydantic>=2.11.7,<3.0",
  "sqlalchemy>=2.0.41,<3.0",
  "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
granian = ["granian[pname,uvloop]>=2.4.1,<3.0"]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"
